# homework_10_django

./: .env  error.txt  m_ongodb_migr.py  pyproject.toml
quotes/: db.sqlite3
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_author_born_date_alter_author_born_location_and_more.py  0002_alter_quote_user.py  0003_rename_user_author_user_id_rename_user_quote_user_id.py  0004_remove_author_author_of_username_and_more.py  0005_remove_author_author_of_username_and_more.py
quotes/quoteapp/static/quoteapp/: style.css
quotes/quoteapp/templates/quoteapp/: author.html  author_profile.html  base.html  detail.html  index.html  quote.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/users/: password_reset_complete.html
