[tool.poetry]
name = "hmw-10-django"
version = "0.1.0"
description = ""
authors = ["LuytensStar <artem05zhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
pymongo = "^4.7.0"
django-environ = "^0.11.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
